[FIX] RTL layout re-record message for text alignment

--- a/web/src/components/pages/contribution/contribution.css
+++ b/web/src/components/pages/contribution/contribution.css
@@ -587,6 +587,7 @@
             [dir='rtl'] & {
                 left: 100% !important;
                 right: unset;
+                text-align: start;
             }
         }
     }
